--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov  3 18:05:03 2018</p>
+         Last Run: Sat Nov  3 19:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -36,16 +36,16 @@
                         <td>4</td>
                         <td>54</td>
                         <td>1</td>
-                        <td>13</td>
-                        <td>WNW</td>
+                        <td>14</td>
+                        <td>NW</td>
                         <td>92</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Overcast</td>
-                        <td>9</td>
-                        <td>9</td>
+                        <td>8</td>
                         <td>6</td>
+                        <td>7</td>
                         <td>51</td>
                         <td>1</td>
                         <td>14</td>
@@ -90,7 +90,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "6",
-                 "9",
+                 "6",
                  "9"
                ]
              },
@@ -102,7 +102,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "8",
-                 "9",
+                 "8",
                  "9"
                ]
              }
@@ -161,7 +161,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "4",
-                 "6",
+                 "7",
                  "17"
                ]
              },
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov  3 18:05:03 2018</p>
+         Last Run: Sat Nov  3 19:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -253,15 +253,15 @@
                         <td>0</td>
                         <td>8</td>
                         <td>ENE</td>
-                        <td>92</td>
+                        <td>91</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Overcast</td>
                         <td>-5</td>
                         <td>-8</td>
-                        <td>11</td>
-                        <td>69</td>
+                        <td>12</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>6</td>
                         <td>E</td>
@@ -272,12 +272,12 @@
                         <td>Overcast</td>
                         <td>-5</td>
                         <td>-8</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>71</td>
                         <td>0</td>
                         <td>6</td>
                         <td>E</td>
-                        <td>89</td>
+                        <td>88</td>
                      </tr>
                   </tbody>
                </table>
@@ -376,8 +376,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "14",
-                 "11",
-                 "10"
+                 "12",
+                 "11"
                ]
              },
              {
@@ -387,7 +387,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "67",
-                 "69",
+                 "68",
                  "71"
                ]
              },
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "92",
                  "91",
-                 "89"
+                 "91",
+                 "88"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov  3 18:05:03 2018</p>
+         Last Run: Sat Nov  3 19:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -461,14 +461,14 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
-                        <td>-10</td>
-                        <td>-14</td>
-                        <td>3</td>
-                        <td>66</td>
+                        <td>-9</td>
+                        <td>-13</td>
+                        <td>4</td>
+                        <td>65</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>12</td>
+                        <td>2</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -480,19 +480,19 @@
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>10</td>
+                        <td>2</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
-                        <td>-11</td>
-                        <td>-16</td>
+                        <td>-10</td>
+                        <td>-14</td>
                         <td>4</td>
-                        <td>71</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>9</td>
+                        <td>2</td>
                      </tr>
                   </tbody>
                </table>
@@ -519,9 +519,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
+                 "-13",
                  "-14",
-                 "-14",
-                 "-16"
+                 "-14"
                ]
              },
              {
@@ -531,9 +531,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
+                 "-9",
                  "-10",
-                 "-10",
-                 "-11"
+                 "-10"
                ]
              }
            ]
@@ -590,7 +590,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "3",
+                 "4",
                  "4",
                  "4"
                ]
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "66",
+                 "65",
                  "68",
-                 "71"
+                 "70"
                ]
              },
              {
@@ -612,9 +612,224 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "12",
-                 "10",
-                 "9"
+                 "2",
+                 "2",
+                 "2"
+               ]
+             }
+           ]
+         };
+                  var options = {
+                     legend: {
+                         position: 'right'
+                     },
+                     scales: {
+                         xAxes: [{
+                             display: true,
+                             scaleLabel: {labelString: 'Date/Time', display: true},
+                             ticks: {
+                                 autoSkip: false
+                             }
+                         }],
+                         yAxes: [{
+                             display: true,
+                             scaleLabel: {labelString: 'Percentage (%)', display: true},
+                             ticks: {
+                                 beginAtZero: true
+                             }
+                         }]
+                     },
+                     tooltips: {
+                         mode: 'index'
+                     }
+                  };
+                  var MyNewChart = new Chart(ctx, {
+                     type: 'bar',
+                     data: data,
+                     options: options
+                  });
+               </script>
+         <hr style="border-width:5px ">
+      </div>
+      <div style="padding:10px;border: 1px none black">
+         <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
+         <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
+         Last Run: Sat Nov  3 19:05:03 2018</p>
+               <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
+               <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 10, 2018 - 12:45PM til  1:45PM</H4>
+               <table class="table table-striped">
+                  <thead>
+                     <tr>
+                        <th>Forecast Time</th>
+                        <th>Summary</th>
+                        <th>Temperture (°C)</th>
+                        <th>Feels Like (°C)</th>
+                        <th>POP (%)</th>
+                        <th>Humidity (%)</th>
+                        <th>UV</th>
+                        <th>Wind (km/hr)</th>
+                        <th>Wind Dir.</th>
+                        <th>Cloud Cover (%)</th>
+                     </tr>
+                  </thead>
+                  <tbody>
+                     <tr>
+                        <td>12:00 PM</td>
+                        <td>Mostly Cloudy</td>
+                        <td>0</td>
+                        <td>-4</td>
+                        <td>3</td>
+                        <td>57</td>
+                        <td>1</td>
+                        <td>11</td>
+                        <td>WNW</td>
+                        <td>74</td>
+                     </tr>
+                     <tr>
+                        <td>01:00 PM</td>
+                        <td>Mostly Cloudy</td>
+                        <td>0</td>
+                        <td>-3</td>
+                        <td>3</td>
+                        <td>57</td>
+                        <td>1</td>
+                        <td>10</td>
+                        <td>WNW</td>
+                        <td>68</td>
+                     </tr>
+                     <tr>
+                        <td>02:00 PM</td>
+                        <td>Mostly Cloudy</td>
+                        <td>1</td>
+                        <td>-2</td>
+                        <td>3</td>
+                        <td>55</td>
+                        <td>1</td>
+                        <td>8</td>
+                        <td>WNW</td>
+                        <td>60</td>
+                     </tr>
+                  </tbody>
+               </table>
+               </style>
+               <div class="container-fluid">
+               	<div class="row">
+               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator7"></canvas></div>
+               	</div>
+               </div>
+               <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
+               <script>
+                  var ctx = document.getElementById("chartHTMLReportGenerator7").getContext("2d");
+                  var data ={
+           "labels":[
+             "12:00 PM",
+             "01:00 PM",
+             "02:00 PM"
+           ],
+           "datasets":[
+             {
+               "label":"apparentTemperature",
+               "borderColor":"rgba(92,0,141,1)",
+               "borderWidth":2,
+               "pointColor":"rgba(92,0,141,1)",
+               "backgroundColor":"rgba(92,0,141,0)",
+               "data":[
+                 "-4",
+                 "-3",
+                 "-2"
+               ]
+             },
+             {
+               "label":"temperature",
+               "borderColor":"rgba(252,49,18,1)",
+               "borderWidth":2,
+               "pointColor":"rgba(252,49,18,1)",
+               "backgroundColor":"rgba(252,49,18,0)",
+               "data":[
+                 "0",
+                 "0",
+                 "1"
+               ]
+             }
+           ]
+         };
+                  var options = {
+                     legend: {
+                         position: 'right'
+                     },
+                     scales: {
+                         xAxes: [{
+                             display: true,
+                             scaleLabel: {labelString: 'Date/Time', display: true},
+                             ticks: {
+                                 autoSkip: false
+                             }
+                         }],
+                         yAxes: [{
+                             display: true,
+                             scaleLabel: {labelString: 'Temp (C)', display: true},
+                             ticks: {
+                                 beginAtZero: false
+                             }
+                         }]
+                     },
+                     tooltips: {
+                         mode: 'index'
+                     }
+                  };
+                  var MyNewChart = new Chart(ctx, {
+                     type: 'line',
+                     data: data,
+                     options: options
+                  });
+               </script>
+               </style>
+               <div class="container-fluid">
+               	<div class="row">
+               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator8"></canvas></div>
+               	</div>
+               </div>
+               <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
+               <script>
+                  var ctx = document.getElementById("chartHTMLReportGenerator8").getContext("2d");
+                  var data ={
+           "labels":[
+             "12:00 PM",
+             "01:00 PM",
+             "02:00 PM"
+           ],
+           "datasets":[
+             {
+               "label":"precipProbability",
+               "borderColor":"rgba(0,0,255,1)",
+               "borderWidth":2,
+               "backgroundColor":"rgba(0,0,255,0.5)",
+               "data":[
+                 "3",
+                 "3",
+                 "3"
+               ]
+             },
+             {
+               "label":"humidity",
+               "borderColor":"rgba(40,177,255,1)",
+               "borderWidth":2,
+               "backgroundColor":"rgba(40,177,255,0.5)",
+               "data":[
+                 "57",
+                 "57",
+                 "55"
+               ]
+             },
+             {
+               "label":"cloudCover",
+               "borderColor":"rgba(233,37,255,1)",
+               "borderWidth":2,
+               "backgroundColor":"rgba(233,37,255,0.5)",
+               "data":[
+                 "74",
+                 "68",
+                 "60"
                ]
              }
            ]
