--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov  3 19:05:03 2018</p>
+         Last Run: Sat Nov  3 20:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -34,35 +34,35 @@
                         <td>8</td>
                         <td>6</td>
                         <td>4</td>
-                        <td>54</td>
+                        <td>51</td>
                         <td>1</td>
                         <td>14</td>
-                        <td>NW</td>
-                        <td>92</td>
+                        <td>WNW</td>
+                        <td>88</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Overcast</td>
-                        <td>8</td>
-                        <td>6</td>
-                        <td>7</td>
-                        <td>51</td>
-                        <td>1</td>
-                        <td>14</td>
-                        <td>NNW</td>
-                        <td>92</td>
-                     </tr>
-                     <tr>
-                        <td>02:00 PM</td>
-                        <td>Overcast</td>
                         <td>9</td>
                         <td>9</td>
-                        <td>17</td>
-                        <td>50</td>
+                        <td>4</td>
+                        <td>49</td>
                         <td>1</td>
                         <td>16</td>
                         <td>NNW</td>
-                        <td>85</td>
+                        <td>87</td>
+                     </tr>
+                     <tr>
+                        <td>02:00 PM</td>
+                        <td>Mostly Cloudy</td>
+                        <td>10</td>
+                        <td>10</td>
+                        <td>13</td>
+                        <td>48</td>
+                        <td>1</td>
+                        <td>16</td>
+                        <td>NNW</td>
+                        <td>79</td>
                      </tr>
                   </tbody>
                </table>
@@ -90,8 +90,8 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "6",
-                 "6",
-                 "9"
+                 "9",
+                 "10"
                ]
              },
              {
@@ -102,8 +102,8 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "8",
-                 "8",
-                 "9"
+                 "9",
+                 "10"
                ]
              }
            ]
@@ -161,8 +161,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "4",
-                 "7",
-                 "17"
+                 "4",
+                 "13"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "54",
                  "51",
-                 "50"
+                 "49",
+                 "48"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "92",
-                 "92",
-                 "85"
+                 "88",
+                 "87",
+                 "79"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov  3 19:05:03 2018</p>
+         Last Run: Sat Nov  3 20:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -248,12 +248,12 @@
                         <td>Overcast</td>
                         <td>-5</td>
                         <td>-9</td>
-                        <td>14</td>
-                        <td>67</td>
+                        <td>13</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>8</td>
                         <td>ENE</td>
-                        <td>91</td>
+                        <td>92</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -261,23 +261,23 @@
                         <td>-5</td>
                         <td>-8</td>
                         <td>12</td>
-                        <td>68</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>E</td>
-                        <td>91</td>
+                        <td>ENE</td>
+                        <td>92</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Overcast</td>
                         <td>-5</td>
                         <td>-8</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>71</td>
                         <td>0</td>
                         <td>6</td>
                         <td>E</td>
-                        <td>88</td>
+                        <td>90</td>
                      </tr>
                   </tbody>
                </table>
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "14",
+                 "13",
                  "12",
-                 "11"
+                 "10"
                ]
              },
              {
@@ -386,8 +386,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "67",
                  "68",
+                 "69",
                  "71"
                ]
              },
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "91",
-                 "91",
-                 "88"
+                 "92",
+                 "92",
+                 "90"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov  3 19:05:03 2018</p>
+         Last Run: Sat Nov  3 20:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -464,23 +464,23 @@
                         <td>-9</td>
                         <td>-13</td>
                         <td>4</td>
-                        <td>65</td>
+                        <td>64</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>2</td>
+                        <td>1</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
                         <td>-10</td>
                         <td>-14</td>
-                        <td>4</td>
-                        <td>68</td>
+                        <td>3</td>
+                        <td>67</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>2</td>
+                        <td>1</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -490,9 +490,9 @@
                         <td>4</td>
                         <td>70</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>WSW</td>
-                        <td>2</td>
+                        <td>1</td>
                      </tr>
                   </tbody>
                </table>
@@ -591,7 +591,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "4",
-                 "4",
+                 "3",
                  "4"
                ]
              },
@@ -601,8 +601,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "65",
-                 "68",
+                 "64",
+                 "67",
                  "70"
                ]
              },
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "2",
-                 "2",
-                 "2"
+                 "1",
+                 "1",
+                 "1"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov  3 19:05:03 2018</p>
+         Last Run: Sat Nov  3 20:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 10, 2018 - 12:45PM til  1:45PM</H4>
                <table class="table table-striped">
@@ -683,7 +683,7 @@
                         <td>1</td>
                         <td>11</td>
                         <td>WNW</td>
-                        <td>74</td>
+                        <td>75</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -703,11 +703,11 @@
                         <td>1</td>
                         <td>-2</td>
                         <td>3</td>
-                        <td>55</td>
+                        <td>56</td>
                         <td>1</td>
                         <td>8</td>
                         <td>WNW</td>
-                        <td>60</td>
+                        <td>61</td>
                      </tr>
                   </tbody>
                </table>
@@ -818,7 +818,7 @@
                "data":[
                  "57",
                  "57",
-                 "55"
+                 "56"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "74",
+                 "75",
                  "68",
-                 "60"
+                 "61"
                ]
              }
            ]
