--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov  3 22:05:03 2018</p>
+         Last Run: Sat Nov  3 23:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>8</td>
                         <td>6</td>
                         <td>4</td>
-                        <td>51</td>
+                        <td>50</td>
                         <td>1</td>
                         <td>14</td>
                         <td>WNW</td>
-                        <td>93</td>
+                        <td>96</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -46,23 +46,23 @@
                         <td>9</td>
                         <td>9</td>
                         <td>3</td>
-                        <td>48</td>
+                        <td>47</td>
                         <td>1</td>
                         <td>18</td>
-                        <td>NNW</td>
-                        <td>93</td>
+                        <td>NW</td>
+                        <td>83</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>10</td>
                         <td>10</td>
-                        <td>12</td>
-                        <td>47</td>
+                        <td>13</td>
+                        <td>45</td>
                         <td>1</td>
                         <td>18</td>
                         <td>NNW</td>
-                        <td>77</td>
+                        <td>72</td>
                      </tr>
                   </tbody>
                </table>
@@ -162,7 +162,7 @@
                "data":[
                  "4",
                  "3",
-                 "12"
+                 "13"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "51",
-                 "48",
-                 "47"
+                 "50",
+                 "47",
+                 "45"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "93",
-                 "93",
-                 "77"
+                 "96",
+                 "83",
+                 "72"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov  3 22:05:03 2018</p>
+         Last Run: Sat Nov  3 23:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -246,10 +246,10 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Overcast</td>
-                        <td>-5</td>
-                        <td>-8</td>
+                        <td>-4</td>
+                        <td>-7</td>
                         <td>14</td>
-                        <td>65</td>
+                        <td>64</td>
                         <td>0</td>
                         <td>6</td>
                         <td>ENE</td>
@@ -265,15 +265,15 @@
                         <td>0</td>
                         <td>6</td>
                         <td>ENE</td>
-                        <td>93</td>
+                        <td>94</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Overcast</td>
                         <td>-5</td>
                         <td>-8</td>
-                        <td>6</td>
-                        <td>69</td>
+                        <td>7</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>6</td>
                         <td>E</td>
@@ -304,7 +304,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-8",
+                 "-7",
                  "-8",
                  "-8"
                ]
@@ -316,7 +316,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-5",
+                 "-4",
                  "-5",
                  "-5"
                ]
@@ -377,7 +377,7 @@
                "data":[
                  "14",
                  "11",
-                 "6"
+                 "7"
                ]
              },
              {
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "65",
+                 "64",
                  "67",
-                 "69"
+                 "70"
                ]
              },
              {
@@ -398,7 +398,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "94",
-                 "93",
+                 "94",
                  "93"
                ]
              }
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov  3 22:05:03 2018</p>
+         Last Run: Sat Nov  3 23:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -488,7 +488,7 @@
                         <td>-10</td>
                         <td>-14</td>
                         <td>3</td>
-                        <td>69</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -603,7 +603,7 @@
                "data":[
                  "64",
                  "67",
-                 "69"
+                 "70"
                ]
              },
              {
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov  3 22:05:03 2018</p>
+         Last Run: Sat Nov  3 23:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 10, 2018 - 12:45PM til  1:45PM</H4>
                <table class="table table-striped">
@@ -677,13 +677,13 @@
                         <td>12:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>0</td>
-                        <td>-3</td>
+                        <td>-4</td>
                         <td>3</td>
                         <td>57</td>
                         <td>1</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>WNW</td>
-                        <td>75</td>
+                        <td>74</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -693,9 +693,9 @@
                         <td>3</td>
                         <td>57</td>
                         <td>1</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>WNW</td>
-                        <td>69</td>
+                        <td>68</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -706,8 +706,8 @@
                         <td>55</td>
                         <td>1</td>
                         <td>8</td>
-                        <td>W</td>
-                        <td>61</td>
+                        <td>WNW</td>
+                        <td>60</td>
                      </tr>
                   </tbody>
                </table>
@@ -734,7 +734,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-3",
+                 "-4",
                  "-3",
                  "-2"
                ]
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "75",
-                 "69",
-                 "61"
+                 "74",
+                 "68",
+                 "60"
                ]
              }
            ]
